# ticketing-system

backend/: .gitignore  manage.py  pyproject.toml
backend/backend/: settings.py  urls.py
backend/tickets/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/tickets/management/commands/: seed.py
backend/tickets/migrations/: 0001_initial.py
backend/utils/: helpers.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: NavigationTree.tsx  TicketList.tsx
frontend/context/: SearchContext.tsx
frontend/utils/: Types.ts  helpers.ts
